--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
     "jwt-decode": "^3.1.2",
+    "keen-ui": "^1.3.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-media-recorder": "^0.1.25",
